--- a/index.html
+++ b/index.html
@@ -1,5 +1,40 @@
-qing.tk - 纯情部落
-----
-2021-12-16
+<!doctype html>
+<html lang="zh">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="icon" type="image/icon" href="/favicon.ico" />
+	<link rel="stylesheet" href="stylesheets/style.css"></link>
+	<title>纯情部落</title>
+</head>
 
-2022-06-10
+<body>
+	<header style="background-color:#dff">
+		<div style="float:left;">
+			<a href="https://qing.tk"><img src="img/qingtk.png" alt="纯情部落"/></a><br>
+			<a href="https://qing.tk">qing.tk</a>
+		</div>
+		<nav>
+		<a href="https://gitter.im/2293/ppmm" target="_blank">ppmm</a> 
+		<!--a href="#/music">音乐</a> <a href="#/poem">诗歌</a> <a href="/math">数学百科</a> <a href="#/video">视频</a> <a href="/books">图书</a> <a
+				href="/dev">编程</a-->
+		<a href="/s">泛搜</a>
+		<a href="/txt">TXT小说</a>
+		<a href="/jaxedit">JaxEdit</a>
+		<a href="/tinycode/">TinyCode</a>
+		<!-- <a href="/webbud">webbud</a>  -->
+		<a href="/software-index">软件名录</a>
+		</nav>
+	</header>
+
+
+<div id="friendsLinks" style="border:1px dashed rgb(155, 202, 123)">
+<a href="https://a-boy.tk">a-boy.tk</a> ~ <a href="https://2293.ml">2293.ml</a>	
+</div>
+----<br>
+<footer>
+		<strong>纯情部落 qing.tk</strong> @2022 <a href="mailto: a_boy@live.com">Email</a></span>
+</footer>
+</body>
+</html>
