--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="icon" type="image/icon" href="/favicon.ico" />
+	<!-- <link rel="icon" type="image/icon" href="/favicon.ico" /> -->
 	<link rel="stylesheet" href="stylesheets/style.css"></link>
 	<title>纯情部落</title>
 </head>
@@ -23,7 +23,7 @@
 		<a href="/txt">TXT小说</a>
 		<a href="/jaxedit">JaxEdit</a>
 		<a href="/tinycode/">TinyCode</a>
-		<!-- <a href="/webbud">webbud</a>  -->
+		<a href="/webbud">webbud</a> 
 		<a href="/software-index">软件名录</a>
 		</nav>
 	</header>
