--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<!-- <link rel="icon" type="image/icon" href="/favicon.ico" /> -->
 	<link rel="stylesheet" href="stylesheets/style.css"></link>
+	<link rel="stylesheet" href="stylesheets/grid.css"></link>
+
 	<title>纯情部落</title>
 </head>
 
@@ -13,7 +15,6 @@
 	<header style="background-color:#dff">
 		<div style="float:left;">
 			<a href="https://qing.tk"><img src="img/qingtk.png" alt="纯情部落"/></a><br>
-			<a href="https://qing.tk">qing.tk</a>
 		</div>
 		<nav>
 		<a href="https://gitter.im/2293/ppmm" target="_blank">ppmm</a> 
@@ -28,13 +29,25 @@
 		</nav>
 	</header>
 
+	<div class="grid">
+		<div class="item"></div>
+		<div class="item"></div>
+		<div class="item"></div>
+		<div class="item"></div>
+		<div class="item"></div>
+		<div class="item"></div>
+		<div class="item"></div>
+		<div class="item"></div>
+		<div class="item"></div>
+		<div class="item"></div>
+	</div>
 
 <div id="friendsLinks" style="border:1px dashed rgb(155, 202, 123)">
-<a href="https://a-boy.tk">a-boy.tk</a> ~ <a href="https://2293.ml">2293.ml</a>	
+<a href="https://a-boy.tk">a-boy.tk</a>  <a href="https://2293.ml">2293.ml</a>	
 </div>
 ----<br>
 <footer>
-		<strong>纯情部落 qing.tk</strong> @2022 <a href="mailto: a_boy@live.com">Email</a></span>
+		<strong>纯情部落 <a href="https://qing.tk">qing.tk</a></strong> @2022~2023 <a href="mailto: a_boy@live.com">Email</a></span>
 </footer>
 </body>
 </html>
