/software/index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<a href="/jaxedit">JaxEdit</a>
 		<a href="/tinycode/">TinyCode</a>
 		<a href="/webbud">webbud</a> 
-		<a href="/software-index">软件名录</a>
+		<a href="/software/">软件名录</a>
 		</nav>
 	</header>
 
