--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</div>
 		<nav>
 		<a href="https://gitter.im/2293/ppmm" target="_blank">ppmm</a> 
-		<!--a href="#/music">音乐</a> <a href="#/poem">诗歌</a> <a href="/math">数学百科</a> <a href="#/video">视频</a> <a href="/books">图书</a> <a
+		<!--a href="#/music">音乐</a> <a href="#/poem">诗歌</a> <a href="#/video">视频</a> <a href="/books">图书</a> <a
 				href="/dev">编程</a-->
 		<a href="/s">泛搜</a>
 		<a href="/txt">TXT小说</a>
@@ -47,7 +47,7 @@
 </div>
 ----<br>
 <footer>
-		<strong>纯情部落 <a href="https://qing.tk">qing.tk</a></strong> @2022~2023 <a href="mailto: a_boy@live.com">Email</a></span>
+		<strong>纯情部落 <a href="https://qing.tk">qing.tk</a></strong> @2022~2024 <a href="mailto: a_boy@live.com">Email</a></span>
 </footer>
 </body>
 </html>
