--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
 				href="/dev">编程</a-->
 		<a href="/s">泛搜</a>
 		<a href="/txt">TXT小说</a>
+		<a href="/software/">软件名录</a>
+		<a href="/math-wiki-guide">数学维基导读</a>
 		<a href="/jaxedit">JaxEdit</a>
 		<a href="/tinycode/">TinyCode</a>
 		<a href="/webbud">webbud</a> 
-		<a href="/software/">软件名录</a>
 		</nav>
 	</header>
 
@@ -43,7 +44,7 @@
 	</div>
 
 <div id="friendsLinks" style="border:1px dashed rgb(155, 202, 123)">
-<a href="https://a-boy.tk">a-boy.tk</a>  <a href="https://2293.ml">2293.ml</a>	
+<a href="https://a-boy.github.io">a-boy.github.io</a>  <a href="https://2293.github.io">2293.github.io</a>	
 </div>
 ----<br>
 <footer>
