add 必应壁纸 编程参考

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 		<a href="/s">泛搜</a>
 		<a href="/txt">TXT小说</a>
 		<a href="/software/">软件名录</a>
+		<a href="/reference/">编程参考</a>
+		<a href="/bing-wallpaper/">必应壁纸</a>
 		<a href="/math-wiki-guide">数学维基导读</a>
 		<a href="/jaxedit">JaxEdit</a>
 		<a href="/tinycode/">TinyCode</a>
