--- a/index.html
+++ b/index.html
@@ -16,20 +16,22 @@
 		<div style="float:left;">
 			<a href="https://qing.tk"><img src="img/qingtk.png" alt="纯情部落"/></a><br>
 		</div>
-		<nav>
+	<nav>
 		<a href="https://gitter.im/2293/ppmm" target="_blank">ppmm</a> 
 		<!--a href="#/music">音乐</a> <a href="#/poem">诗歌</a> <a href="#/video">视频</a> <a href="/books">图书</a> <a
 				href="/dev">编程</a-->
 		<a href="/s">泛搜</a>
 		<a href="/txt">TXT小说</a>
 		<a href="/software/">软件名录</a>
-		<a href="/reference/">编程参考</a>
-		<a href="/bing-wallpaper/">必应壁纸</a>
 		<a href="/math-wiki-guide">数学维基导读</a>
-		<a href="/jaxedit">JaxEdit</a>
 		<a href="/tinycode/">TinyCode</a>
 		<a href="/webbud">webbud</a> 
-		</nav>
+
+		<a href="/jaxedit">JaxEdit</a>
+		<a href="/maze-generator">迷宫</a> 
+		<a href="/reference/">快速参考</a>
+		<a href="/bing-wallpaper/">必应壁纸</a>
+	</nav>
 	</header>
 
 	<div class="grid">
@@ -50,7 +52,9 @@
 </div>
 ----<br>
 <footer>
-		<strong>纯情部落 <a href="https://qing.tk">qing.tk</a></strong> @2022~2024 <a href="mailto: a_boy@live.com">Email</a></span>
+	 @2022~2024 <span style="color: chartreuse;"><strong>纯情部落
+		 <a href="https://qing.tk">qing.tk</a></strong></span>
+	<a href="mailto: a_boy@live.com">Email</a>
 </footer>
 </body>
 </html>
