增加软件名录若干条目

--- a/software/index.html
+++ b/software/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>世界软件名录 by 2293.ml</title>
+  <title>世界软件名录 by qing.tk</title>
 </head>
 <body>
 <pre>
@@ -22,18 +22,77 @@
 	FreeMat
 	mathpix
 	MathType
+	PARI/GP
+	3b1b/manim
+
+系统工具
+	Rufus
+	Ventoy
+	Geek Uninstaller
+	Dism++
+	CPU-Z
+	GPU-Z
+
+	everything
+	AnyTXT Searcher
+	Advanced Renamer
+	WinMerge
+
+压缩
+	7-zip
+	PeaZip
+	WinRar
 
 图像
 	gimp
+	Paint.Net
+	Krita
+	Photoshop
+	Adobe Lightroom
+	Illustrator
+
 视频
-音乐
+	Potplayer
+	VLC player
+	暴风影音
+	ffmpeg
+
+音乐-合成器
 	FL Studio
+	band-in-a-box
+	Cubase
+	唱作魔方
+	Logic Pro X
+	Ableton Live
+	
+音乐-打谱
 	Overture
+	MuseScore
+音乐-平台
+	QQ音乐
+	酷狗音乐
+	酷我音乐
+	华为音乐
+	网易云音乐
+
+游戏
+	steam
+	itchat
+	roblox
+	CSGO
+	League of Legends
+	Warcraft III
+	Starcraft
+	Diablo III
+	原神
+
 数据库
 	Mysql Workbench
 	h2
 	sqlite
-
+	DbGate
+	SQLynx
+	DBeaver
 图书-写作
 	calibre
 
@@ -64,25 +123,20 @@
 		jupyter lab
 		itchat
 		turtledemo
-
 	HTML　Javascript
 		webstorm
 		DreamWeaver
-
-
 	C C++
-		Visual Studio 2019
-
-		
 IDE-编辑器
 	Visual Studio Code
+	Visual Studio 2022
 	Editplus
 	xi-editor
 	Typora
 	Notepad++
-
-
-
+	Notepad3
+	EmEditor
+	Sublime Text
 
 电子设计
 
@@ -91,19 +145,33 @@ IDE-编辑器
 	Cinema4D
 	Maya
 	3D Max
+	Blender
+	ZBrush
+
+	Unreal Engine
+	Unity
 
 网络工具
 	putty
 	wireshark
+	NeatDM
+	qBittorrent增强版
 浏览器
 	Chromium
 	Chrome
+	MicroSoft Edge
 	Firefox Developer Version
 	Opera
 	Yandex Browser
-
-
+	华为浏览器
 黑客与安全
-</pre>  
+	Resource Hacker
+
+</pre>
+<p>注: 开源或免费软件请到官网下载! 
+寻找破解版软件可以到Rutracker和tpb.party中搜索磁力链种子, 再使用qBittorrent增强版做P2P下载<br>	
+https://www.google.com/search?q=rutracker+破解软件名 <br>	
+https://tpb.party/search/Fl%20Studio/ <br>
+</p>
 </body>
 </html>
