软件目录书签

--- a/software/index.html
+++ b/software/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>世界软件名录 by qing.tk</title>
+  <title>Windows软件名录 by qing.tk</title>
 </head>
 <body>
+<p>请在你的浏览器中导入书签文件 <a href="/bookmarks/Windows%E8%BD%AF%E4%BB%B6%E7%9B%AE%E5%BD%95--bookmarks_2024_9_3.html">Windows软件目录--bookmarks_2024_9_3.html</a></p>
 <pre>
 数学
 	SageMath
@@ -16,7 +17,7 @@
 	Maple
 	GNU Octave
 	solidedge
-	LINGO
+	Lindo
 	scilab
 	spss
 	FreeMat
