--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 		<a href="/maze-generator">迷宫</a> 
 		<a href="/reference/">快速参考</a>
 		<a href="/bing-wallpaper/">必应壁纸</a>
+		<a href="/ztype/">zType飞机大战打字游戏</a>
 	</nav>
 	</header>
 
