--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		<a href="/software/">软件名录</a>
 		<a href="/math-wiki-guide">数学维基导读</a>
 		<a href="/tinycode/">TinyCode</a>
+		<a href="/bookmarks/">bookmarks</a>
 		<a href="/webbud">webbud</a> 
 		<br/>
 		<a href="/jaxedit">JaxEdit</a>
