--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>关于 qing.tk</title>
+	<script defer src="https://cloud.umami.is/script.js" data-website-id="6c271546-5c8e-40db-be7d-b2667d3d93de"></script>
 </head>
 <body>
 纯情部落 qing.tk  
