--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<!-- <link rel="icon" type="image/icon" href="/favicon.ico" /> -->
-	<link rel="stylesheet" href="stylesheets/style.css"></link>
-	<link rel="stylesheet" href="stylesheets/grid.css"></link>
-
+	<link rel="stylesheet" href="stylesheets/style.css"/>
+	<link rel="stylesheet" href="stylesheets/grid.css"/>
 	<title>纯情部落</title>
+	<script defer src="https://cloud.umami.is/script.js" data-website-id="6c271546-5c8e-40db-be7d-b2667d3d93de"></script>
 </head>
 
 <body>
