--- a/index.html
+++ b/index.html
@@ -69,11 +69,12 @@ animate();
 			<a href="https://qing.tk"><img src="img/qingtk.png" alt="纯情部落" /></a>
 		</div>
 	</header>
-		<a style="border-top:2px dashed hsl(0, 100%, 50%)" href="/s">泛搜</a>
+		<a style="border-top:2px dashed hsl(230, 100%, 50%)" href="//ai.qing.tk">abot</a>
 		<a style="border-top:2px dashed hsl(36, 100%, 50%)" href="//xue.qing.tk">学习</a>
 		<a style="border-top:2px dashed hsl(72, 100%, 50%)" href="/tinycode/">TinyCode</a>
 		<a style="border-top:2px dashed hsl(108, 100%, 50%)" href="/bookmarks/">bookmarks</a>
 		<a style="border-top:2px dashed hsl(144, 100%, 50%)" href="/webbud">webbud</a>
+		<a style="border-top:2px dashed hsl(0, 100%, 50%)" href="/s">泛搜</a>
 		<a style="border-top:2px dashed hsl(180, 100%, 50%)" href="/jaxedit">JaxEdit</a>
 		<a style="border-top:2px dashed hsl(216, 100%, 50%)" href="/reference/">快速参考</a>
 		<a style="border-top:2px dashed hsl(252, 100%, 50%)" href="/bing-wallpaper/">必应壁纸</a>
