--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@ animate();
 		@2022~2025 <span style="color: chartreuse;"><strong>纯情部落
 				<a href="https://qing.tk">qing.tk</a></strong></span>
 		<a href="mailto: a_boy@live.com">Email</a>
+		<a href="https://mapmyvisitors.com/web/1c07b"  title="Visit tracker"><img src="https://mapmyvisitors.com/map.png?d=VwMJpNfSRvymxWpJ1PNkRBvE9Y8CcuHGeT4blD1IzLc&cl=ffffff" /></a>
 	</footer>
 </body>
 
