to be viewed in WeChat

--- a/about.html
+++ b/about.html
@@ -6,9 +6,19 @@
 	<script defer src="https://cloud.umami.is/script.js" data-website-id="6c271546-5c8e-40db-be7d-b2667d3d93de"></script>
 </head>
 <body>
-纯情部落 qing.tk  
-<br>
+<h5>纯情部落 qing.tk</h5>  
+<p>纯情部落是栖居在Github上的一个开源组织/qingtk，<br>
+	 我们中的某个可能: <br></p>
+<ul>
+	<li>是喜欢折腾开源项目和编程技术的独立开发者</li>
+	<li>是也写诗歌/小说/剧本/网页的文学爱好者</li>
+	<li>喜欢钻研数学开放问题，也谈哲学和新思想</li>
+	<li>……</li>
+	<li>更多的时候属于斜杠青年</li>
+</ul>
+<hr>
 蔚蓝是天空的底色<br>
 纯情是我们的宣言<br>
+<hr>
 </body>
 </html>
