--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@ animate();
 			<a href="https://qing.tk"><img src="img/qingtk.png" alt="纯情部落" /></a>
 		</div>
 	</header>
-		<a style="border-top:2px dashed hsl(230, 100%, 50%)" href="//ai.qing.tk">abot</a>
-		<a style="border-top:2px dashed hsl(36, 100%, 50%)" href="//xue.qing.tk">学习</a>
+		<!-- <a style="border-top:2px dashed hsl(230, 100%, 50%)" href="//abot.qing.tk">abot</a> -->
+		<!-- <a style="border-top:2px dashed hsl(36, 100%, 50%)" href="//xue.qing.tk">学习</a> -->
 		<a style="border-top:2px dashed hsl(72, 100%, 50%)" href="/tinycode/">TinyCode</a>
 		<a style="border-top:2px dashed hsl(108, 100%, 50%)" href="/bookmarks/">bookmarks</a>
 		<a style="border-top:2px dashed hsl(144, 100%, 50%)" href="/webbud">webbud</a>
@@ -78,8 +78,8 @@ animate();
 		<a style="border-top:2px dashed hsl(180, 100%, 50%)" href="/jaxedit">JaxEdit</a>
 		<a style="border-top:2px dashed hsl(216, 100%, 50%)" href="/reference/">快速参考</a>
 		<a style="border-top:2px dashed hsl(252, 100%, 50%)" href="/bing-wallpaper/">必应壁纸</a>
-		<a style="border-top:2px dashed hsl(288, 100%, 50%)" href="/math-wiki-guide">数学维基导读</a>
-		<a style="border-top:2px dashed hsl(324, 100%, 50%)" href="https://gitter.im/2293/ppmm" target="_blank">ppmm</a>
+		<!-- <a style="border-top:2px dashed hsl(288, 100%, 50%)" href="/math-wiki-guide">数学维基导读</a> -->
+		<!-- <a style="border-top:2px dashed hsl(324, 100%, 50%)" href="https://gitter.im/2293/ppmm" target="_blank">ppmm</a> -->
 
 		<!--a href="#/music">音乐</a> <a href="#/poem">诗歌</a> <a href="#/video">视频</a> <a href="/books">图书</a> <a
 				href="/dev">编程</a>
@@ -102,7 +102,9 @@ animate();
 	</div>
 
 	<div id="friendsLinks" style="border:1px dashed rgb(155, 702, 123)">
-		<a href="https://a-boy.github.io">a-boy.github.io</a> <a href="https://2293.github.io">2293.github.io</a>
+		<p>友情链接</p>
+		<a href="https://a-boy.github.io">a-boy.github.io</a><br>
+		<a href="https://2293.github.io">2293.github.io</a>
 	</div>
 	----<br>
 	<footer>
