rm wechat verified num file

--- a/index.html
+++ b/index.html
@@ -69,24 +69,23 @@ animate();
 			<a href="https://qing.tk"><img src="img/qingtk.png" alt="纯情部落" /></a>
 		</div>
 	</header>
-		<!-- <a style="border-top:2px dashed hsl(230, 100%, 50%)" href="//abot.qing.tk">abot</a> -->
-		<!-- <a style="border-top:2px dashed hsl(36, 100%, 50%)" href="//xue.qing.tk">学习</a> -->
+		<a style="border-top:2px dashed hsl(324, 100%, 50%)" href="https://gitter.im/2293/ppmm" target="_blank">ppmm</a>
+
+		<!-- <a style="border-top:2px dashed hsl(230, 100%, 50%)" href="#">abot</a> -->
 		<a style="border-top:2px dashed hsl(72, 100%, 50%)" href="/tinycode/">TinyCode</a>
-		<a style="border-top:2px dashed hsl(108, 100%, 50%)" href="/bookmarks/">bookmarks</a>
 		<a style="border-top:2px dashed hsl(144, 100%, 50%)" href="/webbud">webbud</a>
 		<a style="border-top:2px dashed hsl(0, 100%, 50%)" href="/s">泛搜</a>
 		<a style="border-top:2px dashed hsl(180, 100%, 50%)" href="/jaxedit">JaxEdit</a>
 		<a style="border-top:2px dashed hsl(216, 100%, 50%)" href="/reference/">快速参考</a>
 		<a style="border-top:2px dashed hsl(252, 100%, 50%)" href="/bing-wallpaper/">必应壁纸</a>
-		<!-- <a style="border-top:2px dashed hsl(288, 100%, 50%)" href="/math-wiki-guide">数学维基导读</a> -->
-		<!-- <a style="border-top:2px dashed hsl(324, 100%, 50%)" href="https://gitter.im/2293/ppmm" target="_blank">ppmm</a> -->
+		<a style="border-top:2px dashed hsl(108, 100%, 50%)" href="/bookmarks/">bookmarks</a>
 
-		<!--a href="#/music">音乐</a> <a href="#/poem">诗歌</a> <a href="#/video">视频</a> <a href="/books">图书</a> <a
-				href="/dev">编程</a>
-		<a href="/txt">TXT小说</a>
+		<a href="#/music">音乐</a> <a href="#/poem">诗歌</a> <a href="/maze-generator">迷宫</a><a href="#/video">视频</a> 
+		 <a href="/dev">编程</a>
 		<a href="/software/">软件名录</a>
-		<a href="/maze-generator">迷宫</a>
-		<a href="/ztype/">zType飞机大战打字游戏</a-->
+		<a href="/txt">TXT小说</a>
+
+		
 	</nav>
 	<div class="grid">
 		<div class="item"></div>
