--- a/index.html
+++ b/index.html
@@ -65,10 +65,9 @@
 		animate();
 	</script>
 	<header style="background-color:#fdffdd">
-		<div style="float:left;">
-			<a href="https://qing.tk"><img src="img/qingtk.png" alt="纯情部落" /></a>
-		</div>
-		<nav>
+		<div>
+			<a href="https://qing.tk"><img src="img/qingtk.png" alt="纯情部落"/> </a>
+	
 			~ <a style="border:2px dashed hsl(72, 100%, 50%)" href="/tinycode/">TinyCode</a>
 			<!-- <a style="border-bottom:2px dashed hsl(324, 100%, 50%)" href="https://gitter.im/2293/ppmm" target="_blank">ppmm</a>
 		<a style="border-bottom:2px dashed hsl(230, 100%, 50%)" href="#">abot</a> -->
@@ -85,7 +84,8 @@
 		<a href="/software/">软件名录</a>
 		<a href="/txt">TXT小说</a> -->
 
-		</nav>
+	
+		</div>
 	</header>
 
 	<div class="grid">
