remove google verify file+

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		<a style="border-bottom:2px dashed hsl(230, 100%, 50%)" href="#">abot</a> -->
 			<a style="border:2px dashed hsl(144, 100%, 50%)" href="/webbud">webbud</a>
 			<a style="border:2px dashed hsl(0, 100%, 50%)" href="/s">泛搜</a>
-			<a style="border:2px dashed hsl(33, 100%, 50%)" href="https://md.qing.tk">QingMD</a>
+			<!-- <a style="border:2px dashed hsl(33, 100%, 50%)" href="https://md.qing.tk">QingMD</a> -->
 			<a style="border:2px dashed hsl(180, 100%, 50%)" href="/jaxedit">JaxEdit</a>
 			<a style="border:2px dashed hsl(200, 100%, 50%)" href="/reference/">快速参考</a>
 			<a style="border:2px dashed hsl(252, 100%, 50%)" href="/bing-wallpaper/">必应壁纸</a>
