--- a/software/index.html
+++ b/software/index.html
@@ -8,7 +8,7 @@
   <script defer src="https://cloud.umami.is/script.js" data-website-id="6c271546-5c8e-40db-be7d-b2667d3d93de"></script>
 </head>
 <body>
-<p>请在你的浏览器中导入书签文件 <a href="/bookmarks/Windows%E8%BD%AF%E4%BB%B6%E7%9B%AE%E5%BD%95--bookmarks_2024_9_3.html">Windows软件目录--bookmarks_2024_9_3.html</a></p>
+<p>你可以在浏览器中导入书签文件 <a href="/bookmarks/Windows%E8%BD%AF%E4%BB%B6%E7%9B%AE%E5%BD%95--bookmarks_2024_9_3.html">Windows软件目录--bookmarks_2024_9_3.html</a></p>
 <pre>
 数学
 	SageMath
