https://xue.qing.tk

--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
 			<a style="border:2px dashed hsl(200, 100%, 50%)" href="/reference/">快速参考</a>
 			<a style="border:2px dashed hsl(252, 100%, 50%)" href="/bing-wallpaper/">必应壁纸</a>
 			<a style="border:2px dashed hsl(108, 100%, 50%)" href="/bookmarks/">bookmarks</a>
+			<a style="border:2px dashed hsl(320, 100%, 50%)" href="https://xue.qing.tk">学习</a>
 
 			<!-- <a href="#/music">音乐</a> <a href="#/poem">诗歌</a> <a href="/maze-generator">迷宫</a><a href="#/video">视频</a> 
-		 <a href="/dev">编程</a>
+		<a href="/dev">编程</a>
 		<a href="/software/">软件名录</a>
 		<a href="/txt">TXT小说</a> -->
 
