--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
 	<!-- <link rel="icon" type="image/icon" href="/favicon.ico" /> -->
 	<link rel="stylesheet" href="stylesheets/style.css" />
 	<title>纯情部落</title>
-	<script defer src="https://cloud.umami.is/script.js"
-		data-website-id="6c271546-5c8e-40db-be7d-b2667d3d93de"></script>
 </head>
 
 <body>
@@ -120,8 +118,8 @@
 	<footer>
 		@2022~2026 <span style="color: #7fff00;"><strong>纯情部落
 				<a href="https://qing.tk">qing.tk</a></strong></span>
-		<a href="https://mapmyvisitors.com/web/1c07b" title="Visit tracker"><img
-				src="https://mapmyvisitors.com/map.png?d=VwMJpNfSRvymxWpJ1PNkRBvE9Y8CcuHGeT4blD1IzLc&cl=ffffff" /></a>
+		<!-- <a href="https://mapmyvisitors.com/web/1c07b" title="Visit tracker"><img
+				src="https://mapmyvisitors.com/map.png?d=VwMJpNfSRvymxWpJ1PNkRBvE9Y8CcuHGeT4blD1IzLc&cl=ffffff" /></a> -->
 	</footer>
 </body>
 
